--- a/main.html
+++ b/main.html
@@ -7,6 +7,19 @@
 </head>
 
 <body>
+	<header>CITIZEN</header>
+	<nav>
+		<a href="#actor" id="nav-actor">Actor</a>
+		<a href="#quote" id="nav-quote">Quote</a>
+	</nav>
+    <summary>It is abuse of powers by goverment officers movie. that citizen is one man of hero and asked the govt for their mistakes and punish for them  their fault.</summary>
+     <section id="actor">Actor: Ajith Kumar</section>
+	<section id="quote">We live for correctly and honestly without curruption</section>
+	<aside>
+		IMDb: 7.2
+		Release Date: 8/June/2001
+	</aside>
+	<footer>Produced by: S.S.Chakravarthy</footer>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
