--- a/main.html
+++ b/main.html
@@ -12,8 +12,9 @@
 		<a href="#actor" id="nav-actor">Actor</a>
 		<a href="#quote" id="nav-quote">Quote</a>
 	</nav>
-    <summary>It is abuse of powers by goverment officers movie. that citizen is one man of hero and asked the govt for their mistakes and punish for them  their fault.</summary>
-     <section id="actor">Actor: Ajith Kumar</section>
+    <summary>It is abuse of powers by goverment officers movie. that citizen is one man of hero and asked the govt for their mistakes and punish for them  their faults.</summary>
+	
+	<section id="actor"; style="color:red">Actor: Ajith Kumar</section>
 	<section id="quote">We live for correctly and honestly without curruption</section>
 	<aside>
 		IMDb: 7.2
